TypeScriptForRuby/01main.c.c.out
01main.c.c:86:11: warning: duplicate 'short' declaration specifier [-Wduplicate-decl-specifier]
   86 |     short short* p;
      |           ^~~~~
01main.c.c:216:8: error: redefinition of 'sClass'
  216 | struct sClass
      |        ^
01main.c.c:116:8: note: previous definition is here
  116 | struct sClass
      |        ^
01main.c.c:219:11: error: duplicate member 'mName'
  219 |     char* mName;
      |           ^
01main.c.c:218:11: note: previous declaration is here
  218 |     char* mName;
      |           ^
01main.c.c:221:8: error: redefinition of 'sType'
  221 | struct sType
      |        ^
01main.c.c:120:8: note: previous definition is here
  120 | struct sType
      |        ^
01main.c.c:224:20: error: duplicate member 'mClass'
  224 |     struct sClass* mClass;
      |                    ^
01main.c.c:223:20: note: previous declaration is here
  223 |     struct sClass* mClass;
      |                    ^
01main.c.c:226:8: error: redefinition of 'sVar'
  226 | struct sVar
      |        ^
01main.c.c:124:8: note: previous definition is here
  124 | struct sVar
      |        ^
01main.c.c:231:11: error: duplicate member 'mName'
  231 |     char* mName;
      |           ^
01main.c.c:228:11: note: previous declaration is here
  228 |     char* mName;
      |           ^
01main.c.c:232:11: error: duplicate member 'mCValueName'
  232 |     char* mCValueName;
      |           ^
01main.c.c:229:11: note: previous declaration is here
  229 |     char* mCValueName;
      |           ^
01main.c.c:233:19: error: duplicate member 'mType'
  233 |     struct sType* mType;
      |                   ^
01main.c.c:230:19: note: previous declaration is here
  230 |     struct sType* mType;
      |                   ^
01main.c.c:235:8: error: redefinition of 'sVarTable'
  235 | struct sVarTable
      |        ^
01main.c.c:153:8: note: previous definition is here
  153 | struct sVarTable
      |        ^
01main.c.c:241:31: error: duplicate member 'mVars'
  241 |     struct map$2charphsVarph* mVars;
      |                               ^
01main.c.c:237:31: note: previous declaration is here
  237 |     struct map$2charphsVarph* mVars;
      |                               ^
01main.c.c:242:11: error: duplicate member 'mGlobal'
  242 |     _Bool mGlobal;
      |           ^
01main.c.c:238:11: note: previous declaration is here
  238 |     _Bool mGlobal;
      |           ^
01main.c.c:243:23: error: duplicate member 'mParent'
  243 |     struct sVarTable* mParent;
      |                       ^
01main.c.c:239:23: note: previous declaration is here
  239 |     struct sVarTable* mParent;
      |                       ^
01main.c.c:244:9: error: duplicate member 'mID'
  244 |     int mID;
      |         ^
01main.c.c:240:9: note: previous declaration is here
  240 |     int mID;
      |         ^
01main.c.c:246:8: error: redefinition of 'CVALUE'
  246 | struct CVALUE
      |        ^
01main.c.c:160:8: note: previous definition is here
  160 | struct CVALUE
      |        ^
01main.c.c:251:11: error: duplicate member 'c_value'
  251 |     char* c_value;
      |           ^
01main.c.c:248:11: note: previous declaration is here
  248 |     char* c_value;
      |           ^
01main.c.c:252:19: error: duplicate member 'type'
  252 |     struct sType* type;
      |                   ^
01main.c.c:249:19: note: previous declaration is here
  249 |     struct sType* type;
      |                   ^
01main.c.c:253:18: error: duplicate member 'var'
  253 |     struct sVar* var;
      |                  ^
01main.c.c:250:18: note: previous declaration is here
  250 |     struct sVar* var;
      |                  ^
01main.c.c:255:8: error: redefinition of 'sInfo'
  255 | struct sInfo
      |        ^
01main.c.c:189:8: note: previous definition is here
  189 | struct sInfo
      |        ^
01main.c.c:263:20: error: duplicate member 'source'
  263 |     struct buffer* source;
      |                    ^
01main.c.c:257:20: note: previous declaration is here
  257 |     struct buffer* source;
      |                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
